# sim

3Dsim/: 512M_16KB_sequence_R.ascii  512M_16KB_sequence_RandW.ascii  512M_16KB_sequence_W.ascii  CMakeLists.txt  My3Dsim  a.out  avlTree.c  buffer.c  cmd  fcl.c  flash.c  ftl.c  getAvgSubReqSize.sh  getRWTime.sh  initialize.c  initialize.h  interface.c  page.parameters  page.parameters1  page.parameters2  page.parameters3  page.parameters4  page.parameters_d0  page.parameters_d1  page.parameters_d3  schedule  seqRW_T.out  seq_R.out  seq_R_D12.out  seq_T.out  ssd.c  test.c  testAllTrace.py
3Dsim/trace/: generate_trace.py  trace_size192_time270000  trace_size192_time540000  trace_size192_time9000  trace_size192_time90000  trace_size192_time900000  trace_size32_time270000  trace_size32_time540000  trace_size32_time9000  trace_size32_time90000  trace_size32_time900000  trace_size96_time270000  trace_size96_time540000  trace_size96_time9000  trace_size96_time90000  trace_size96_time900000
3Dsim/userOut/: Rsize192_time270000.out  Rsize192_time540000.out  Rsize192_time9000.out  Rsize192_time90000.out  Rsize192_time900000.out  csv  csv-d1-rand  csv-d3-rand  csv-d3-seq  csv-s0-rand  csv-s0-seq  csv-s1-rand  csv-s1-seq  csv-s2-rand  csv-s2-seq  csv-s3-rand  csv-s3-seq  getResult.py  readme
3Dsim/userOut2/: csv_d3_seq  csv_dy0_rand  csv_dy0_seq  csv_dy1_rand  csv_dy1_seq  csv_dy3_rand  csv_s0_rand  csv_s0_seq  csv_s1_rand  csv_s1_seq  csv_s2_rand  csv_s2_seq  csv_s3_rand  csv_s3_seq  getResult.py  readme
3Dsim/userOut3/: csv_dy0_rand  csv_dy0_seq  csv_dy1_rand  csv_dy1_seq  (+11 more)
(+4946 files in other folders)
